# emacs

./: .gitignore  Gilgamesh.org  Gilgamesh.org~  README.md  custom.el  init.el  meow.el
cad/MotorControl/: edge_cuts-Sketch.dxf
cad/bldc_driver/: edge_cuts.20250302-124350.FCBak  edge_cuts.FCStd
fw/RustFM/: Cargo.toml  memory.x
fw/RustFM/.cargo/: config.toml~
fw/RustFM/src/: main.rs
hw/FlightManagement/: .gitignore  .gitignore~  Camera.kicad_sch  FlightManagement.kicad_pcb  FlightManagement.kicad_prl  FlightManagement.kicad_pro  FlightManagement.kicad_sch  FlightManagement.kicad_sch-bak  Radio.kicad_sch  fp-info-cache
hw/MotorControl/: Motor.kicad_sch  MotorControl.kicad_pcb  MotorControl.kicad_prl  MotorControl.kicad_pro  MotorControl.kicad_sch
hw/PowerMonitor/: CellMonitor.kicad_sch  PowerMonitor.kicad_pcb  PowerMonitor.kicad_prl  PowerMonitor.kicad_pro  PowerMonitor.kicad_sch  fp-info-cache
hw/bldc_driver/: bldc_driver.kicad_pcb  bldc_driver.kicad_prl  bldc_driver.kicad_pro  bldc_driver.kicad_sch  fp-info-cache  motor.kicad_sch  ~bldc_driver.kicad_sch.lck
hw/fmu/: .gitignore
hw/fmu/fmu/: fmu.kicad_prl  fmu.kicad_pro  fmu.kicad_sch  fmu.kicad_sch-bak  fp-info-cache  rf.kicad_sch
